--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -42,6 +42,7 @@
         </div>
     </div>
 </nav>
+<div class="container pt-5">
     {% block main %}
     {% if messages %}
     {% for message in messages %}
@@ -58,12 +59,12 @@
 
     {% endblock %}
 <!-- Footer - Added element -->
-<footer class="container mt-5 mb-3 text-center">
+<!-- <footer class="container mt-5 mb-3 text-center">
   <p class="small text-muted">
       <i class="bi bi-book bookmark-icon"></i> مهبا | تمامی حقوق محفوظ است &copy; ۱۴۰۴
   </p>
-</footer>
-
+</footer> -->
+</div>
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
